<resources>
    <string name="app_name">OperadoresTMS</string>
    <string name="ingresar">Iniciar sesion</string>
    <string name="recordar_datos">Recordar Datos</string>
    <string name="hint_spinner">Empresa</string>
    <string name="hint_telefono">Teléfono</string>
    <string name="hint_no_operador">Número Operador</string>


    <string name="hint_correo">Correo electrónico</string>
    <string name="hint_nombre">Nombre(s)</string>
    <string name="hint_contraseña">Contraseña</string>
    <string name="hint_apaterno">Apellido Paterno</string>
    <string name="hint_amaterno">Apellido Materno</string>
    <string name="hint_confirma_correo">Confirma correo electrónico</string>
    <string name="hint_empresa">Empresa</string>
    <string name="tv_centro_monitoreo">Centro Monitoreo</string>
    <string name="tv_central_soluciones">Central Soluciones</string>
    <string name="tv_olvidaste_tu_contraseña">¿Olvidaste tu contraseña?</string>
</resources>