<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imgMain"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:background="#80FFFFFF"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_main"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/linearMain"
        android:layout_marginBottom="24dp"


        />
    <LinearLayout
        android:id="@+id/linearMain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
       app:layout_constraintTop_toBottomOf="@+id/imgMain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/white"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_spinner"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            android:layout_marginTop="@dimen/common_padding_default"
            >

            <AutoCompleteTextView
                android:id="@+id/etTalleres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"

                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_no_operador"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            android:layout_marginTop="@dimen/common_padding_default"
            app:counterEnabled="true"
            app:counterMaxLength="8"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="8"
                android:inputType="phone"
                />

        </com.google.android.material.textfield.TextInputLayout>




        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilContraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_contraseña"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            android:layout_marginTop="@dimen/common_padding_default"


            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etContraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recordar_datos"
            android:layout_gravity="end"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_registrarme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingresar"
            android:layout_marginTop="@dimen/common_padding_default"

            app:cornerRadius="20dp"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:backgroundTintMode="screen"

            />


            <TextView
                android:id="@+id/tv_olvidaste_contraseña"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_olvidaste_tu_contraseña"
                android:layout_gravity="center"
                />




    </LinearLayout>

    <ImageView
        android:id="@+id/ic_call"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_call_monitoreo"

        app:layout_constraintStart_toStartOf="@id/tv_centro_monitoreo"

        app:layout_constraintEnd_toEndOf="@+id/tv_centro_monitoreo"
        app:layout_constraintBottom_toTopOf="@+id/tv_centro_monitoreo"

        />

    <TextView
        android:id="@+id/tv_centro_monitoreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/linearMain"
        app:layout_constraintTop_toBottomOf="@id/linearMain"
        app:layout_constraintBottom_toBottomOf="parent"

        android:text= "@string/tv_centro_monitoreo"


        />

    <TextView
        android:id="@+id/tv_central_soluciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/linearMain"
        app:layout_constraintTop_toBottomOf="@id/linearMain"
        app:layout_constraintBottom_toBottomOf="parent"

        android:text="@string/tv_central_soluciones"
        />

    <ImageView
        android:id="@+id/ic_central_soluciones"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_support_agent"

        app:layout_constraintStart_toStartOf="@id/tv_central_soluciones"

        app:layout_constraintEnd_toEndOf="@+id/tv_central_soluciones"
        app:layout_constraintBottom_toTopOf="@+id/tv_centro_monitoreo"

        />



</androidx.constraintlayout.widget.ConstraintLayout>